@@ -14,6 +14,7 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  * add recursion to option parser for configuration admin page and provide
    available valid values for an `ExtensionOption` like `IPasswordHashMethod`
    by a select field (dropdown box) - or meaningful message on missing options
+ * add cleanup page for purging `session_attribute` db table via admin web UI
 
 
 acct_mgr-0.3.2 (not yet released) - branch 0.11
